crates/onebrain-core/src/scheduler/snapshots/onebrain_core__scheduler__launchd__tests__generate_plist_snapshot_recurring_skill.snap
---
source: crates/onebrain-core/src/scheduler/launchd.rs
expression: out
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
    <key>Label</key>
    <string>com.onebrain.daily</string>
    <key>ProgramArguments</key>
    <array>
        <string>/opt/homebrew/bin/onebrain</string>
        <string>skill</string>
        <string>run</string>
        <string>--vault</string>
        <string>/Users/test/vault</string>
        <string>--skill</string>
        <string>/daily</string>
        <string>--harness</string>
        <string>claude</string>
    </array>
    <key>StartCalendarInterval</key>
    <dict>
        <key>Minute</key>
        <integer>0</integer>
        <key>Hour</key>
        <integer>9</integer>
    </dict>
    <key>StandardOutPath</key>
    <string>/Users/test/vault/07-logs/scheduler/2026/05/onebrain-daily.stdout</string>
    <key>StandardErrorPath</key>
    <string>/Users/test/vault/07-logs/scheduler/2026/05/onebrain-daily.stderr</string>
    <key>RunAtLoad</key>
    <false/>
</dict>
</plist>
