crates/onebrain-core/src/scheduler/snapshots/onebrain_core__scheduler__launchd__tests__generate_plist_snapshot_recurring_skill_array_form.snap
---
source: crates/onebrain-core/src/scheduler/launchd.rs
expression: out
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
    <key>Label</key>
    <string>com.onebrain.daily</string>
    <key>ProgramArguments</key>
    <array>
        <string>/opt/homebrew/bin/onebrain</string>
        <string>skill</string>
        <string>run</string>
        <string>--vault</string>
        <string>/Users/test/vault</string>
        <string>--skill</string>
        <string>/daily</string>
        <string>--harness</string>
        <string>claude</string>
    </array>
    <key>StartCalendarInterval</key>
    <array>
        <dict>
            <key>Minute</key>
            <integer>0</integer>
            <key>Hour</key>
            <integer>0</integer>
        </dict>
        <dict>
            <key>Minute</key>
            <integer>0</integer>
            <key>Hour</key>
            <integer>6</integer>
        </dict>
        <dict>
            <key>Minute</key>
            <integer>0</integer>
            <key>Hour</key>
            <integer>12</integer>
        </dict>
        <dict>
            <key>Minute</key>
            <integer>0</integer>
            <key>Hour</key>
            <integer>18</integer>
        </dict>
    </array>
    <key>EnvironmentVariables</key>
    <dict>
        <key>ONEBRAIN_SCHEDULED</key>
        <string>1</string>
    </dict>
    <key>RunAtLoad</key>
    <false/>
</dict>
</plist>
